css header complete.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <div>
         <img src="./resources/images/ic-logo.svg" alt="Dragon Icon">
-        <span >Colmar Academy</span>
+        <strong >Colmar</strong><!--  --><span>Academy</span>
       </div>
       <ul>
         <li>On Campus</li>
@@ -19,6 +19,8 @@
         <li>Sign in</li>
       </ul>
     </header>
+
+
     <!-- First Container -->
     <div>
       <div class="media section">
