Genral Layout of boxes with no padding, margins or text formating.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <!-- First Container -->
-    <div>
+    <div class="card large" id="one">
       <div class="media section">
           <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
       </div>
@@ -38,7 +38,7 @@
       </div>
 
       <!-- Second Container -->
-      <div>
+      <div class="card large" id="two">
 
 
         <div class="media section">  <!-- left Side of Second Container -->
@@ -52,7 +52,7 @@
         <div class="content section"><!-- Right Side of Second Container -->
 
           <!-- Small content item 1 -->
-          <div>
+          <div class="card small">
             <div class="media section"><!-- left Side of Item 1 -->
                 <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
             </div>
@@ -71,7 +71,7 @@
 
 
           <!-- Small content item 2 -->
-          <div>
+          <div class="card small">
             <div class="media section"><!-- left Side of Item 1 -->
                 <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
             </div>
@@ -90,7 +90,7 @@
 
 
           <!-- Small content item 3 -->
-          <div>
+          <div class="card small">
             <div class="media section"><!-- left Side of Item 3 -->
                 <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
             </div>
@@ -111,13 +111,13 @@
           </div>  <!-- End of second container -->
 
           <!-- Third Container -->
-          <div>
+          <div id="three">
 
             <div class=""> <!--Title-->
               <h2>Start Learning</h2>
             </div>
 
-            <div> <!--Box of Boxes-->
+            <div class="card wrap"> <!--Box of Boxes-->
 
               <div class="media section"><!--box 1-->
                 <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
@@ -173,58 +173,59 @@
 
           <!-- Fourth Container -->
 
-          <div>
+           <div id="four">
             <div class="">
               <h2>Thesis Exibit</h2>
             </div>
-
-            <div class="media section">  <!-- left Side of Fourth Container -->
-              <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-              <h2>It doesn't hurt to keep practicing</h2>
-              <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
-              <div class="">Emanuel Sr. Strategist at Hiring.com
+            <div  class="card large">
+              <div class="media section">  <!-- left Side of Fourth Container -->
+                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+                <h2>It doesn't hurt to keep practicing</h2>
+                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
+                <div class="">Emanuel Sr. Strategist at Hiring.com
+                </div>
               </div>
-            </div>
 
-            <div class="content section"><!-- Right Side of Fourth Container -->
+              <div class="content section"><!-- Right Side of Fourth Container -->
 
-              <!-- Small content item 1 -->
-              <div>
-                <div class="media section"><!-- left Side of Item 1 -->
-                    <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                </div>
+                <!-- Small content item 1 -->
+                <div class="card small">
+                  <div class="media section"><!-- left Side of Item 1 -->
+                      <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+                  </div>
 
-                <div class="content section"><!-- Right Side of Item 1 -->
-                  <div class="">
-                    <h1>Learn something new everyday</h1>
-                    <p>Lorem ipsum dolor sit
-                      amet, usu an delectus.</p>
+                  <div class="content section"><!-- Right Side of Item 1 -->
                     <div class="">
-                      test
+                      <h1>Learn something new everyday</h1>
+                      <p>Lorem ipsum dolor sit
+                        amet, usu an delectus.</p>
+                      <div class="">
+                        test
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div> <!-- End of Item 1-->
+                </div> <!-- End of Item 1-->
 
 
-              <!-- Small content item 2 -->
-              <div>
-                <div class="media section"><!-- left Side of Item 1 -->
-                    <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                </div>
+                <!-- Small content item 2 -->
+                <div class="card small">
+                  <div class="media section"><!-- left Side of Item 1 -->
+                      <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+                  </div>
 
-                <div class="content section"><!-- Right Side of Item 1 -->
-                  <div class="">
-                    <h1>Learn something new everyday</h1>
-                    <p>Lorem ipsum dolor sit
-                      amet, usu an delectus.</p>
+                  <div class="content section"><!-- Right Side of Item 1 -->
                     <div class="">
-                      test
+                      <h1>Learn something new everyday</h1>
+                      <p>Lorem ipsum dolor sit
+                        amet, usu an delectus.</p>
+                      <div class="">
+                        test
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div> <!-- End of Item 2-->
-            </div>  <!-- End of right side of Fourth container -->
+                </div> <!-- End of Item 2-->
+              </div>  <!-- End of right side of Fourth container -->
+            </div>  <!-- End of Large -->
           </div>  <!-- End of Fourth container -->
 
           <footer>
