--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link rel="stylesheet" type="text/css"  href="resources/css/reset.css">
+    <link rel="icon" href="./resources/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css"  href="resources/css/style.css">
   </head>
   <body>
@@ -20,51 +21,50 @@
       </ul>
     </header>
 
-
     <!-- First Container -->
-    <div class="card large" id="one">
-      <div class="media section">
-          <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+    <div class="card" id="one">
+      <div class="media ">
+        <div class="image">
+        </div>
       </div>
-      <div class="content section">
-        <div class="">
+      <div class="content">
+        <div class="group">
           <h1>Learn something new everyday</h1>
-          <p>Lorem ipsum dolor sit amet, usu an delectus.</p>
-          <div class="">
-          </div>
-          test
+          <h3>Lorem ipsum dolor sit amet, usu an delectus.</h3>
+          <div class="button">
+          Start here
           </div>
         </div>
       </div>
+    </div>  <!-- End of first container -->
 
       <!-- Second Container -->
-      <div class="card large" id="two">
+      <div class="card " id="two">
 
 
-        <div class="media section">  <!-- left Side of Second Container -->
-          <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+
+        <div class="media">  <!-- left Side of Second Container -->
+          <div class="image large">
+          </div>
           <h2>It doesn't hurt to keep practicing</h2>
           <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
-          <div class="">Emanuel Sr. Strategist at Hiring.com
+          <div><strong>Emanuel Sr. Strategist at Hiring.com</strong>
           </div>
         </div>
 
-        <div class="content section"><!-- Right Side of Second Container -->
+        <div class="content"><!-- Right Side of Second Container -->
 
           <!-- Small content item 1 -->
           <div class="card small">
-            <div class="media section"><!-- left Side of Item 1 -->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+            <div class="media"><!-- left Side of Item 1 -->
+              <div class="image">
+              </div>
             </div>
-
-            <div class="content section"><!-- Right Side of Item 1 -->
-              <div class="">
-                <h1>Learn something new everyday</h1>
-                <p>Lorem ipsum dolor sit
-                  amet, usu an delectus.</p>
-                <div class="">
-                  test
-                </div>
+            <div class="content"><!-- Right Side of Item 1 -->
+              <div class="smallgroup">
+                <h4>Orientation Date</h4>
+                <p>Tues. 10/11 & Wed 10/12: 8:00am-3:00pm</p>
+                <a href="#">Read more</a>
               </div>
             </div>
           </div> <!-- End of Item 1-->
@@ -72,18 +72,16 @@
 
           <!-- Small content item 2 -->
           <div class="card small">
-            <div class="media section"><!-- left Side of Item 1 -->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+            <div class="media"><!-- left Side of Item 2 -->
+              <div class="image">
+              </div>
             </div>
-
-            <div class="content section"><!-- Right Side of Item 1 -->
-              <div class="">
-                <h1>Learn something new everyday</h1>
+            <div class="content"><!-- Right Side of Item 2 -->
+              <div class="smallgroup">
+                <h4>Learn something new everyday</h4>
                 <p>Lorem ipsum dolor sit
                   amet, usu an delectus.</p>
-                <div class="">
-                  test
-                </div>
+                <a href="#">Read more</a>
               </div>
             </div>
           </div> <!-- End of Item 2-->
@@ -91,80 +89,97 @@
 
           <!-- Small content item 3 -->
           <div class="card small">
-            <div class="media section"><!-- left Side of Item 3 -->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+            <div class="media"><!-- left Side of Item 3 -->
+              <div class="image">
+              </div>
             </div>
 
-            <div class="content section"><!-- Right Side of Item 3 -->
-              <div class="">
-                <h3>Learn something new everyday</h3>
+            <div class="content"><!-- Right Side of Item 3 -->
+              <div class="smallgroup">
+                <h4>Learn something new everyday</h4>
                 <p>Lorem ipsum dolor sit
                   amet, usu an delectus.</p>
-                <div class="">
-                    test
-                </div>
+                <a href="#">Read more</a>
               </div>
             </div>
           </div> <!-- End of Item 3-->
 
-            </div>  <!-- End of right side of second container -->
-          </div>  <!-- End of second container -->
+        </div>  <!-- End of right side of second container -->
+      </div>  <!-- End of second container -->
 
           <!-- Third Container -->
           <div id="three">
 
             <div class=""> <!--Title-->
-              <h2>Start Learning</h2>
+              <h3>Start Learning</h3>
             </div>
 
             <div class="card wrap"> <!--Box of Boxes-->
 
-              <div class="media section"><!--box 1-->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                <h2>Software engineering</h2>
-                <div class="">Courses
+              <div class="box"><!--box 1-->
+                <div class="image-box">
+                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
                 </div>
-                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no.</p>
+                <div class ="text_box">
+                  <h4>Software engineering</h4>
+                  <h5>Courses</h5>
+                  <p>Web development, mobile development, iOT, APIs</p>
+                </div>
               </div><!--End of Box 1-->
 
-              <div class="media section"><!--box 2-->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                <h2>Software engineering</h2>
-                <div class="">Courses
+              <div class="box"><!--box 2-->
+                <div class="image-box">
+                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
                 </div>
-                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no.</p>
+                <div class="text_box">
+                  <h4>Computer Art</h4>
+                  <h5>Courses</h5>
+                  <p>Imaging and Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                </div>
               </div><!--End of Box 2-->
 
-              <div class="media section"><!--box 3-->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                <h2>Software engineering</h2>
-                <div class="">Courses
+              <div class="box"><!--box 3-->
+                <div class="image-box">
+                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
                 </div>
-                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no.</p>
+                <div class="text_box">
+                  <h4>Software engineering</h4>
+                  <h5>Courses</h5>
+                  <p>Web development, mobile development, iOT, APIs</p>
+                </div>
               </div><!--End of Box 3-->
 
-              <div class="media section"><!--box 4-->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                <h2>Software engineering</h2>
-                <div class="">Courses
+              <div class="box"><!--box 4-->
+                <div class="image-box">
+                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
                 </div>
-                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no.</p>
+                <div class="text_box">
+                  <h4>Software engineering</h4>
+                  <h5>Courses</h5>
+                  <p>Web development, mobile development, iOT, APIs</p>
+                </div>
               </div><!--End of Box 4-->
 
-              <div class="media section"><!--box 5-->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                <h2>Software engineering</h2>
-                <div class="">Courses
+              <div class="box"><!--box 5-->
+                <div class="image-box">
+                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
                 </div>
-                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no.</p>
+                <div class="text_box">
+                  <h4>Software engineering</h4>
+                  <h5>Courses</h5>
+                  <p>Web development, mobile development, iOT, APIs</p>
+                </div>
               </div><!--End of Box 5-->
 
-              <div class="media section"><!--box 6-->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
-                <h2>Software engineering</h2>
-                <div class="">Courses
+              <div class="box"><!--box 6-->
+                <div class="image-box">
+                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
                 </div>
-                <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no.</p>
+                <div class="text_box">
+                  <h4>Software engineering</h4>
+                  <h5>Courses</h5>
+                  <p>Web development, mobile development, iOT, APIs</p>
+                </div>
               </div><!--End of Box 6-->
 
             </div><!--End of Box of Boxes-->
@@ -177,31 +192,33 @@
             <div class="">
               <h2>Thesis Exibit</h2>
             </div>
-            <div  class="card large">
-              <div class="media section">  <!-- left Side of Fourth Container -->
-                <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+            <div  class="card ">
+              <div class="media">  <!-- left Side of Fourth Container -->
+                <div class="image large">
+                  <video src="./resources/videos/thesis.mp4"
+                  width="100%" height="" controls> Video Not Supported
+                </div>
                 <h2>It doesn't hurt to keep practicing</h2>
                 <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
                 <div class="">Emanuel Sr. Strategist at Hiring.com
                 </div>
               </div>
 
-              <div class="content section"><!-- Right Side of Fourth Container -->
+              <div class="content"><!-- Right Side of Fourth Container -->
 
                 <!-- Small content item 1 -->
                 <div class="card small">
-                  <div class="media section"><!-- left Side of Item 1 -->
-                      <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+                  <div class="media"><!-- left Side of Item 1 -->
+                    <div class="image">
+                    </div>
                   </div>
 
-                  <div class="content section"><!-- Right Side of Item 1 -->
-                    <div class="">
-                      <h1>Learn something new everyday</h1>
+                  <div class="content"><!-- Right Side of Item 1 -->
+                    <div class="smallgroup">
+                      <h4>Learn something new everyday</h4>
                       <p>Lorem ipsum dolor sit
                         amet, usu an delectus.</p>
-                      <div class="">
-                        test
-                      </div>
+                      <a href="#">Read more</a>
                     </div>
                   </div>
                 </div> <!-- End of Item 1-->
@@ -209,23 +226,24 @@
 
                 <!-- Small content item 2 -->
                 <div class="card small">
-                  <div class="media section"><!-- left Side of Item 1 -->
-                      <img src="./resources/images/banner.jpg" alt="Peole studying at wooden picnic table.">
+                  <div class="media"><!-- left Side of Item 2 -->
+                    <div class="image">
+                    </div>
                   </div>
 
-                  <div class="content section"><!-- Right Side of Item 1 -->
-                    <div class="">
-                      <h1>Learn something new everyday</h1>
+                  <div class="content"><!-- Right Side of Item 2 -->
+                    <div class="smallgroup">
+                      <h4>Learn something new everyday</h4>
                       <p>Lorem ipsum dolor sit
                         amet, usu an delectus.</p>
-                      <div class="">
-                        test
-                      </div>
+                      <a href="#">Read more</a>
                     </div>
                   </div>
                 </div> <!-- End of Item 2-->
+
+
               </div>  <!-- End of right side of Fourth container -->
-            </div>  <!-- End of Large -->
+            </div>  <!-- End of card -->
           </div>  <!-- End of Fourth container -->
 
           <footer>
