Almost finished, need web changes,and small fixes.

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
           <!-- Small content item 1 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 1 -->
-              <div class="image">
+              <div class="image" id="orientation">
               </div>
             </div>
             <div class="content"><!-- Right Side of Item 1 -->
               <div class="smallgroup">
                 <h4>Orientation Date</h4>
-                <p>Tues. 10/11 & Wed 10/12: 8:00am-3:00pm</p>
+                <p >Tues. 10/11 & Wed 10/12: 8:00am-3:00pm</p>
                 <a href="#">Read more</a>
               </div>
             </div>
@@ -73,14 +73,13 @@
           <!-- Small content item 2 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 2 -->
-              <div class="image">
+              <div class="image " id="campus">
               </div>
             </div>
             <div class="content"><!-- Right Side of Item 2 -->
               <div class="smallgroup">
-                <h4>Learn something new everyday</h4>
-                <p>Lorem ipsum dolor sit
-                  amet, usu an delectus.</p>
+                <h4>Our Campus</h4>
+                <p>Find which campus is close by you.</p>
                 <a href="#">Read more</a>
               </div>
             </div>
@@ -90,15 +89,14 @@
           <!-- Small content item 3 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 3 -->
-              <div class="image">
+              <div class="image" id="guest">
               </div>
             </div>
 
             <div class="content"><!-- Right Side of Item 3 -->
               <div class="smallgroup">
-                <h4>Learn something new everyday</h4>
-                <p>Lorem ipsum dolor sit
-                  amet, usu an delectus.</p>
+                <h4>Our Guest Lecture</h4>
+                <p>Join a keynote with Oliver Sack about music in medical treatment.</p>
                 <a href="#">Read more</a>
               </div>
             </div>
@@ -110,15 +108,13 @@
           <!-- Third Container -->
           <div id="three">
 
-            <div class=""> <!--Title-->
-              <h3>Start Learning</h3>
-            </div>
+            <h3>Start Learning</h3>
 
             <div class="card wrap"> <!--Box of Boxes-->
 
               <div class="box"><!--box 1-->
                 <div class="image-box">
-                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
+                  <img src="./resources/images/course-software.jpg" alt="to be entered">
                 </div>
                 <div class ="text_box">
                   <h4>Software engineering</h4>
@@ -140,10 +136,10 @@
 
               <div class="box"><!--box 3-->
                 <div class="image-box">
-                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
+                  <img src="./resources/images/course-design.jpg" alt="to be entered">
                 </div>
                 <div class="text_box">
-                  <h4>Software engineering</h4>
+                  <h4>Design</h4>
                   <h5>Courses</h5>
                   <p>Web development, mobile development, iOT, APIs</p>
                 </div>
@@ -151,10 +147,10 @@
 
               <div class="box"><!--box 4-->
                 <div class="image-box">
-                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
+                  <img src="./resources/images/course-data.jpg" alt="to be entered">
                 </div>
                 <div class="text_box">
-                  <h4>Software engineering</h4>
+                  <h4>Data</h4>
                   <h5>Courses</h5>
                   <p>Web development, mobile development, iOT, APIs</p>
                 </div>
@@ -162,10 +158,10 @@
 
               <div class="box"><!--box 5-->
                 <div class="image-box">
-                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
+                  <img src="./resources/images/course-business.jpg" alt="to be entered">
                 </div>
                 <div class="text_box">
-                  <h4>Software engineering</h4>
+                  <h4>Business</h4>
                   <h5>Courses</h5>
                   <p>Web development, mobile development, iOT, APIs</p>
                 </div>
@@ -173,10 +169,10 @@
 
               <div class="box"><!--box 6-->
                 <div class="image-box">
-                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
+                  <img src="./resources/images/course-marketing.jpg" alt="to be entered">
                 </div>
                 <div class="text_box">
-                  <h4>Software engineering</h4>
+                  <h4>Marketing</h4>
                   <h5>Courses</h5>
                   <p>Web development, mobile development, iOT, APIs</p>
                 </div>
@@ -189,19 +185,17 @@
           <!-- Fourth Container -->
 
            <div id="four">
-            <div class="">
-              <h2>Thesis Exibit</h2>
-            </div>
+
+              <h3>Thesis Exibit</h3>
+
             <div  class="card ">
               <div class="media">  <!-- left Side of Fourth Container -->
                 <div class="image large">
                   <video src="./resources/videos/thesis.mp4"
                   width="100%" height="" controls> Video Not Supported
                 </div>
-                <h2>It doesn't hurt to keep practicing</h2>
+                <h4>Reimagine urban.</h4>
                 <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
-                <div class="">Emanuel Sr. Strategist at Hiring.com
-                </div>
               </div>
 
               <div class="content"><!-- Right Side of Fourth Container -->
@@ -209,16 +203,14 @@
                 <!-- Small content item 1 -->
                 <div class="card small">
                   <div class="media"><!-- left Side of Item 1 -->
-                    <div class="image">
+                    <div class="image" id="fisma">
                     </div>
                   </div>
 
                   <div class="content"><!-- Right Side of Item 1 -->
                     <div class="smallgroup">
-                      <h4>Learn something new everyday</h4>
-                      <p>Lorem ipsum dolor sit
-                        amet, usu an delectus.</p>
-                      <a href="#">Read more</a>
+                      <h4>Fisma: Design and Prototype</h4>
+                      <p>Designer showcase of new prototype product.</p>
                     </div>
                   </div>
                 </div> <!-- End of Item 1-->
@@ -227,16 +219,14 @@
                 <!-- Small content item 2 -->
                 <div class="card small">
                   <div class="media"><!-- left Side of Item 2 -->
-                    <div class="image">
+                    <div class="image" id="nowthen">
                     </div>
                   </div>
 
                   <div class="content"><!-- Right Side of Item 2 -->
                     <div class="smallgroup">
-                      <h4>Learn something new everyday</h4>
-                      <p>Lorem ipsum dolor sit
-                        amet, usu an delectus.</p>
-                      <a href="#">Read more</a>
+                      <h4>Now and Then</h4>
+                      <p>Research study about New York.</p>
                     </div>
                   </div>
                 </div> <!-- End of Item 2-->
@@ -247,7 +237,13 @@
           </div>  <!-- End of Fourth container -->
 
           <footer>
+            <div >
             &copy 2016 Colmar Academy.  All rights reserved.
+            </div>
+            <ul>
+              <li>Terms</li>
+              <li>Privacy</li>
+            </ul>
           </footer>
 
 
