--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <img src="./resources/images/ic-logo.svg" alt="Dragon Icon">
         <strong >Colmar</strong><!--  --><span>Academy</span>
       </div>
+      <img class="icon" src="./resources/images/ic-on-campus.svg" alt="On Campus">
+      <img class="icon" src="./resources/images/ic-online.svg" alt="Online">
+      <img class="icon" src="./resources/images/ic-login.svg" alt="Login">
       <ul>
         <li>On Campus</li>
         <li>Online</li>
@@ -43,8 +46,8 @@
 
 
 
-        <div class="media">  <!-- left Side of Second Container -->
-          <div class="image large">
+        <div class="media large">  <!-- left Side of Second Container -->
+          <div class="image" id="twoimage">
           </div>
           <h2>It doesn't hurt to keep practicing</h2>
           <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
@@ -190,7 +193,7 @@
 
             <div  class="card ">
               <div class="media">  <!-- left Side of Fourth Container -->
-                <div class="image large">
+                <div class="image">
                   <video src="./resources/videos/thesis.mp4"
                   width="100%" height="" controls> Video Not Supported
                 </div>
