--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Colmar Academy</title>
     <link rel="stylesheet" type="text/css"  href="resources/css/reset.css">
     <link rel="icon" href="./resources/favicon/favicon.ico" type="image/x-icon">
@@ -16,7 +17,7 @@
       <img class="icon" src="./resources/images/ic-on-campus.svg" alt="On Campus">
       <img class="icon" src="./resources/images/ic-online.svg" alt="Online">
       <img class="icon" src="./resources/images/ic-login.svg" alt="Login">
-      <ul>
+      <ul role="presentation">
         <li>On Campus</li>
         <li>Online</li>
         <li>For Companies</li>
@@ -27,7 +28,7 @@
     <!-- First Container -->
     <div class="card" id="one">
       <div class="media ">
-        <div class="image">
+        <div class="image" aria-label="Image looking down at people at picnic table?">
         </div>
       </div>
       <div class="content">
@@ -47,7 +48,7 @@
 
 
         <div class="media large">  <!-- left Side of Second Container -->
-          <div class="image" id="twoimage">
+          <div class="image" id="twoimage" aria-label="Image of someone reading?">>
           </div>
           <h2>It doesn't hurt to keep practicing</h2>
           <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
@@ -60,7 +61,7 @@
           <!-- Small content item 1 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 1 -->
-              <div class="image" id="orientation">
+              <div class="image" id="orientation" aria-label="Image of people walking along path?">>
               </div>
             </div>
             <div class="content"><!-- Right Side of Item 1 -->
@@ -76,7 +77,7 @@
           <!-- Small content item 2 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 2 -->
-              <div class="image " id="campus">
+              <div class="image " id="campus" aria-label="Image of people at tables?">>
               </div>
             </div>
             <div class="content"><!-- Right Side of Item 2 -->
@@ -92,7 +93,7 @@
           <!-- Small content item 3 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 3 -->
-              <div class="image" id="guest">
+              <div class="image" id="guest" aria-label="Image of guest speaker?">>
               </div>
             </div>
 
@@ -117,7 +118,7 @@
 
               <div class="box"><!--box 1-->
                 <div class="image-box">
-                  <img src="./resources/images/course-software.jpg" alt="to be entered">
+                  <img src="./resources/images/course-software.jpg" alt="Computer screen on desk">
                 </div>
                 <div class ="text_box">
                   <h4>Software engineering</h4>
@@ -128,7 +129,7 @@
 
               <div class="box"><!--box 2-->
                 <div class="image-box">
-                  <img src="./resources/images/course-computer-art.jpg" alt="to be entered">
+                  <img src="./resources/images/course-computer-art.jpg" alt="Hand holding cell phone.">
                 </div>
                 <div class="text_box">
                   <h4>Computer Art</h4>
@@ -139,7 +140,7 @@
 
               <div class="box"><!--box 3-->
                 <div class="image-box">
-                  <img src="./resources/images/course-design.jpg" alt="to be entered">
+                  <img src="./resources/images/course-design.jpg" alt="Someone Holding Camera">
                 </div>
                 <div class="text_box">
                   <h4>Design</h4>
@@ -150,7 +151,7 @@
 
               <div class="box"><!--box 4-->
                 <div class="image-box">
-                  <img src="./resources/images/course-data.jpg" alt="to be entered">
+                  <img src="./resources/images/course-data.jpg" alt="Laptop">
                 </div>
                 <div class="text_box">
                   <h4>Data</h4>
@@ -161,7 +162,7 @@
 
               <div class="box"><!--box 5-->
                 <div class="image-box">
-                  <img src="./resources/images/course-business.jpg" alt="to be entered">
+                  <img src="./resources/images/course-business.jpg" alt="Chess Board">
                 </div>
                 <div class="text_box">
                   <h4>Business</h4>
@@ -172,7 +173,7 @@
 
               <div class="box"><!--box 6-->
                 <div class="image-box">
-                  <img src="./resources/images/course-marketing.jpg" alt="to be entered">
+                  <img src="./resources/images/course-marketing.jpg" alt="Smart watch on wrist.">
                 </div>
                 <div class="text_box">
                   <h4>Marketing</h4>
@@ -195,7 +196,7 @@
               <div class="media">  <!-- left Side of Fourth Container -->
                 <div class="image">
                   <video src="./resources/videos/thesis.mp4"
-                  width="100%" height="" controls> Video Not Supported
+                  width="100%" height="" controls aria-label="Video of Building with clouds passing by.">> Video Not Supported
                 </div>
                 <h4>Reimagine urban.</h4>
                 <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
@@ -206,7 +207,7 @@
                 <!-- Small content item 1 -->
                 <div class="card small">
                   <div class="media"><!-- left Side of Item 1 -->
-                    <div class="image" id="fisma">
+                    <div class="image" id="fisma" aria-label="Image of cell phone and someone writing on paper?">
                     </div>
                   </div>
 
@@ -222,7 +223,7 @@
                 <!-- Small content item 2 -->
                 <div class="card small">
                   <div class="media"><!-- left Side of Item 2 -->
-                    <div class="image" id="nowthen">
+                    <div class="image" id="nowthen" aria-label="Image of New York skyline?">>
                     </div>
                   </div>
 
@@ -243,7 +244,7 @@
             <div >
             &copy 2016 Colmar Academy.  All rights reserved.
             </div>
-            <ul>
+            <ul role="presentation">
               <li>Terms</li>
               <li>Privacy</li>
             </ul>
