Removed old CSS file, Removed CSS Viewport statement.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
         <div class="media large">  <!-- left Side of Second Container -->
-          <div class="image" id="twoimage" aria-label="Image of someone reading?">>
+          <div class="image" id="twoimage" aria-label="Image of someone reading?">
           </div>
           <h2>It doesn't hurt to keep practicing</h2>
           <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
@@ -61,7 +61,7 @@
           <!-- Small content item 1 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 1 -->
-              <div class="image" id="orientation" aria-label="Image of people walking along path?">>
+              <div class="image" id="orientation" aria-label="Image of people walking along path?">
               </div>
             </div>
             <div class="content"><!-- Right Side of Item 1 -->
@@ -77,7 +77,7 @@
           <!-- Small content item 2 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 2 -->
-              <div class="image " id="campus" aria-label="Image of people at tables?">>
+              <div class="image " id="campus" aria-label="Image of people at tables?">
               </div>
             </div>
             <div class="content"><!-- Right Side of Item 2 -->
@@ -93,7 +93,7 @@
           <!-- Small content item 3 -->
           <div class="card small">
             <div class="media"><!-- left Side of Item 3 -->
-              <div class="image" id="guest" aria-label="Image of guest speaker?">>
+              <div class="image" id="guest" aria-label="Image of guest speaker?">
               </div>
             </div>
 
@@ -196,7 +196,7 @@
               <div class="media">  <!-- left Side of Fourth Container -->
                 <div class="image">
                   <video src="./resources/videos/thesis.mp4"
-                  width="100%" height="" controls aria-label="Video of Building with clouds passing by.">> Video Not Supported
+                  width="100%" height="" controls aria-label="Video of Building with clouds passing by."> Video Not Supported
                 </div>
                 <h4>Reimagine urban.</h4>
                 <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
@@ -223,7 +223,7 @@
                 <!-- Small content item 2 -->
                 <div class="card small">
                   <div class="media"><!-- left Side of Item 2 -->
-                    <div class="image" id="nowthen" aria-label="Image of New York skyline?">>
+                    <div class="image" id="nowthen" aria-label="Image of New York skyline?">
                     </div>
                   </div>
 
