--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="group">
           <h1>Learn something new everyday</h1>
           <h3>Lorem ipsum dolor sit amet, usu an delectus.</h3>
-          <div class="button">
+          <button>
           Start here
-          </div>
+        </button>
         </div>
       </div>
     </div>  <!-- End of first container -->
@@ -195,8 +195,7 @@
             <div  class="card ">
               <div class="media">  <!-- left Side of Fourth Container -->
                 <div class="image">
-                  <video src="./resources/videos/thesis.mp4"
-                  width="100%" height="" controls aria-label="Video of Building with clouds passing by."> Video Not Supported
+                  <video src="./resources/videos/thesis.mp4" controls aria-label="Video of Building with clouds passing by."> Video Not Supported </video>
                 </div>
                 <h4>Reimagine urban.</h4>
                 <p>An dico animal appetere sea. Qui graece aperiri cotidieque cu. Ea fugit nonumy expetenda quo, vix homero incorrupte honestatis no. Oporteat senserit urbanitas cum ne, at pro.</p>
@@ -242,7 +241,7 @@
 
           <footer>
             <div >
-            &copy 2016 Colmar Academy.  All rights reserved.
+            &copy; 2016 Colmar Academy.  All rights reserved.
             </div>
             <ul role="presentation">
               <li>Terms</li>
